fixed text alignment in messages

--- a/src/app/messaging/chatroom/message/message.component.css
+++ b/src/app/messaging/chatroom/message/message.component.css
@@ -3,6 +3,7 @@
 }
 .text-right {
   margin-left: 40%;
+  text-align: left!important;
 }
 .text-left {
   margin-right: 40%;
